# semantic_file_explorer_aastu

./: .gitignore  PLAN.md  PRD.md  README.md  chunking_implementation_summary.md  document.md  implementation_plan.md  implementation_summary.md  package-lock.json  package.json  pnpm-lock.yaml  rules.md  search_filename.md  tantivy_impl.md  tasks.md  tests.md  vite.config.ts
.cursor/: rules.mdc
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: benchmark.rs  chunker.rs  chunking_plan.md  db.rs  embedder.rs  embedding.rs  extractor.rs  image_embedder.rs  lib.rs  main.rs  repair_db.rs  search.rs  watcher.rs
src-tauri/src/commands/: benchmark_commands.rs  category_commands.rs  chat_commands.rs  env_commands.rs  file_operations.rs  fs_commands.rs  indexing_commands.rs  mod.rs  search_commands.rs
src-tauri/src/core/: error.rs  file_system.rs  indexer.rs  mod.rs  models.rs
src/components/: IndexingStatus.tsx  app-sidebar.tsx
src/components/Chatbot/: ChatWindow.test.tsx  ChatWindow.tsx  SearchResultItem.test.tsx  SearchResultItem.tsx
src/components/ContextMenu/: FileContextMenu.tsx
src/components/FileExplorerBody/: FileExplorer.tsx  FileGrid.tsx  FileIcon.tsx  FileItem.tsx  FileList.tsx  FilterPanel.tsx  FilterToggle.tsx  FolderItem.tsx
src/components/RecentItems/: RecentItemsPage.tsx
src/components/Search/: EnhancedSearchResults.tsx  SearchResultsDisplay.tsx
src/components/TopBar/: DropdownMenu.tsx  InspectorButton.tsx  NavigationIcons.tsx  RightSectionIcons.tsx  TopBar.tsx  ViewModeButtons.tsx
src/components/layout/: LibraryDropdown.tsx  MainLayout.tsx  NavButton.tsx  Navbar.tsx  RecentPanel.tsx  Sidebar.tsx  SidebarSection.tsx
src/components/ui/: badge.tsx
src/lib/: fileCategories.json  gemini.ts  utils.ts
src/pages/: CategoriesPage.tsx
src/services/: commands.ts  test.ts
src/sidebar/: page.tsx
src/store/: atoms.ts  categoryAtoms.ts  chatAtoms.ts
src/types/: file.ts  location.ts  search.ts
